--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-social-icons": "^6.18.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
